Mass code refactors, efficiency improvements and debug messages removals